<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/color_yellow"
        android:icon="@drawable/ic_round_fiber_manual_record_24"
        android:iconTint="@color/yellow"
        android:title="@string/color_yellow"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/color_green"
        android:icon="@drawable/ic_round_fiber_manual_record_24"
        android:iconTint="@color/green"
        android:title="@string/color_green"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/color_pink"
        android:icon="@drawable/ic_round_fiber_manual_record_24"
        android:iconTint="@color/pink"
        android:title="@string/color_pink"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/color_purple"
        android:icon="@drawable/ic_round_fiber_manual_record_24"
        android:iconTint="@color/purple"
        android:title="@string/color_purple"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/color_blue"
        android:icon="@drawable/ic_round_fiber_manual_record_24"
        android:iconTint="@color/blue"
        android:title="@string/color_blue"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/color_grey"
        android:icon="@drawable/ic_round_fiber_manual_record_24"
        android:iconTint="@color/grey"
        android:title="@string/color_grey"
        app:showAsAction="collapseActionView" />
</menu>